--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </nav>
     <!-- END nav -->
 
-    <section class="home-slider owl-carousel">
+    <!-- <section class="home-slider owl-carousel">
       <div class="slider-item" style="background-image: url(images/h_b_1.jpeg)">
         <div class="overlay"></div>
         <div class="container">
@@ -121,8 +121,27 @@
           </div>
         </div>
       </div>
-    </section>
-
+    </section> -->
+    <div class="hero-wrap" style="background-image: url('images/h_b_1.jpeg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div
+          class="row no-gutters slider-text d-flex align-itemd-end justify-content-center"
+        >
+          <div
+            class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center"
+          >
+            <div class="text">
+              <p class="breadcrumbs mb-2">
+                <span class="mr-2"><a href="index.html">Home</a></span>
+                <span>Contact</span>
+              </p>
+              <h1 class="mb-4 bread">Home</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <section class="ftco-booking">
       <div class="container">
         <div class="row">
@@ -219,7 +238,7 @@
               </div>
             </div>
           </div>
-          
+
           <!-- <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services py-4 d-block text-center">
               <div class="d-flex justify-content-center">
@@ -285,7 +304,7 @@
             <div class="room">
               <a
                 class="img d-flex justify-content-center align-items-center"
-                style="background-image: url(images/standard\ \(2\).jpeg)"
+                style="background-image: url(images/standard\\(2\).jpeg)"
               >
                 <!-- <div class="icon d-flex justify-content-center align-items-center">
     							<span class="icon-search2"></span>
