--- a/index.html
+++ b/index.html
@@ -132,11 +132,7 @@
             class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center"
           >
             <div class="text">
-              <p class="breadcrumbs mb-2">
-                <span class="mr-2"><a href="index.html">Home</a></span>
-                <span>Contact</span>
-              </p>
-              <h1 class="mb-4 bread">Home</h1>
+              <h1 class="mb-4 bread">Welcome to Hotel Harbans</h1>
             </div>
           </div>
         </div>
