--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="room">
               <a
                 class="img d-flex justify-content-center align-items-center"
-                style="background-image: url(images/standard\\(2\).jpeg)"
+                style="background-image: url(images/s_2.jpeg)"
               >
                 <!-- <div class="icon d-flex justify-content-center align-items-center">
     							<span class="icon-search2"></span>
