--- a/rooms.html
+++ b/rooms.html
@@ -105,7 +105,7 @@
                   <a
                     href="rooms-single.html"
                     class="img d-flex justify-content-center align-items-center"
-                    style="background-image: url(images/standard\ \(2\).jpeg)"
+                    style="background-image: url(images/s_2.jpeg)"
                   >
                     <!-- <div
                       class="icon d-flex justify-content-center align-items-center"
