--- a/attraction.html
+++ b/attraction.html
@@ -59,10 +59,12 @@
             <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="rooms.html" class="nav-link">Rooms</a>
+            </li><li class="nav-item">
+              <a href="attraction.html" class="nav-link">Attraction</a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item active">
               <a href="gallery.html" class="nav-link">Gallery</a>
             </li>
             <!-- <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
@@ -91,7 +93,7 @@
                 <span class="mr-2"><a href="index.html">Home</a></span>
                 <span>About</span>
               </p>
-              <h1 class="mb-4 bread">Rooms</h1>
+              <h1 class="mb-4 bread">Attraction</h1>
             </div>
           </div>
         </div>
@@ -101,41 +103,24 @@
     <section class="ftco-section bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-12">
             <div class="row">
               <div class="col-sm col-md-6 col-lg-4 ftco-animate">
                 <div class="room">
                   <a
-                    href="rooms-single.html"
                     class="img d-flex justify-content-center align-items-center"
-                    style="background-image: url(images/s_2.jpeg)"
+                    style="background-image: url(images/attraction/advace.jpg)"
                   >
-                    <!-- <div
-                      class="icon d-flex justify-content-center align-items-center"
-                    >
-                      <span class="icon-search2"></span>
-                    </div> -->
                   </a>
-                  <div class="text p-3 text-center">
-                    <h3 class="mb-3">
-                      <a>Standard Room</a>
-                    </h3>
+                  <div class="description text-center mt-2">
+                    <h5>Advance Study Shimla</h5>
                     <p>
-                      <span class="price mr-2">2000.00</span>
-                      <span class="per">per night</span>
-                    </p>
-                    <ul class="list">
-                      <li><span>Max:</span> 2 Persons</li>
-                      <li><span>Size:</span> 45 m2</li>
-                      <li><span>View:</span> No View</li>
-                      <li><span>Extra Person:</span> RS. 700.00</li>
-                      <li><span>Bed:</span> 1</li>
-                    </ul>
-                    <hr />
-                    <p class="pt-1">
-                      <a href="tel:+91 9857922727" class="btn-custom"
-                        >Book Now <span class="icon-long-arrow-right"></span
-                      ></a>
+                      Advance Study Shimla is a reputed educational institute
+                      known for its quality coaching and academic support.
+                      Located in the scenic hill station of Shimla, it offers
+                      comprehensive courses and expert guidance for competitive
+                      exams. The institute focuses on enhancing students' skills
+                      and knowledge to help them achieve academic excellence.
                     </p>
                   </div>
                 </div>
@@ -143,31 +128,20 @@
               <div class="col-sm col-md-6 col-lg-4 ftco-animate">
                 <div class="room">
                   <a
-                    href="rooms-single.html"
                     class="img d-flex justify-content-center align-items-center"
-                    style="background-image: url(images/deluc.jpeg)"
+                    style="
+                      background-image: url(images/attraction/anadale.avif);
+                    "
                   >
                   </a>
-                  <div class="text p-3 text-center">
-                    <h3 class="mb-3">
-                      <a>Delux Room</a>
-                    </h3>
+                  <div class="description text-center mt-2">
+                    <h5>Annandale</h5>
                     <p>
-                      <span class="price mr-2">2500.00</span>
-                      <span class="per">per night</span>
-                    </p>
-                    <ul class="list">
-                      <li><span>Max:</span> 2 Persons</li>
-                      <li><span>Size:</span> 60 m2</li>
-                      <li><span>View:</span> Valley View</li>
-					  <li><span>Extra Person:</span> RS. 700.00</li>
-                      <li><span>Bed:</span> 1</li>
-                    </ul>
-                    <hr />
-                    <p class="pt-1">
-                      <a href="tel:+91 9857922727" class="btn-custom"
-                        >Book Now <span class="icon-long-arrow-right"></span
-                      ></a>
+                      Annandale, also known as Annadale, is a historic and
+                      scenic valley located in Shimla, Himachal Pradesh.
+                      Situated approximately 2 km from Shimla Railway Station
+                      and 5 km from The Ridge, it offers a tranquil retreat
+                      amidst lush greenery and towering deodar trees.
                     </p>
                   </div>
                 </div>
@@ -175,191 +149,86 @@
               <div class="col-sm col-md-6 col-lg-4 ftco-animate">
                 <div class="room">
                   <a
-                    href="rooms-single.html"
                     class="img d-flex justify-content-center align-items-center"
-                    style="background-image: url(images/super-delux.jpeg)"
+                    style="background-image: url(images/attraction/Jakhu-.jpg)"
                   >
                   </a>
-                  <div class="text p-3 text-center">
-                    <h3 class="mb-3">
-                      <a href="rooms-single.html">Super Deluxe Room</a>
-                    </h3>
+                  <div class="description text-center mt-2">
+                    <h5>Jakhu</h5>
                     <p>
-                      <span class="price mr-2">3500.00</span>
-                      <span class="per">per night</span>
-                    </p>
-                    <ul class="list">
-                      <li><span>Max:</span> 2 Persons</li>
-                      <li><span>Size:</span> 70 m2</li>
-                      <li><span>View:</span> Valley View</li>
-					  <li><span>Extra Person:</span> RS. 700.00</li>
-                      <li><span>Bed:</span> 1</li>
-                    </ul>
-                    <hr />
-                    <p class="pt-1">
-                      <a href="tel:+91 9857922727" class="btn-custom"
-                        >Book Now <span class="icon-long-arrow-right"></span
-                      ></a>
+                      Jakhu is a famous hilltop in Shimla, known for its ancient
+                      Jakhu Temple dedicated to Lord Hanuman. It offers
+                      panoramic views of the Himalayas and Shimla city. The area
+                      is popular for trekking and features a giant Hanuman
+                      statue, attracting pilgrims and tourists alike.
                     </p>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-3 sidebar">
-            <!-- <div class="sidebar-wrap bg-light ftco-animate">
-	      			<h3 class="heading mb-4">Advanced Search</h3>
-	      			<form action="#">
-	      				<div class="fields">
-		              <div class="form-group">
-		                <input type="text" id="checkin_date" class="form-control checkin_date" placeholder="Check In Date">
-		              </div>
-		              <div class="form-group">
-		                <input type="text" id="checkin_date" class="form-control checkout_date" placeholder="Check Out Date">
-		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">Room Type</option>
-	                    	<option value="">Suite</option>
-	                      <option value="">Family Room</option>
-	                      <option value="">Deluxe Room</option>
-	                      <option value="">Classic Room</option>
-	                      <option value="">Superior Room</option>
-	                      <option value="">Luxury Room</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">0 Adult</option>
-	                    	<option value="">1 Adult</option>
-	                      <option value="">2 Adult</option>
-	                      <option value="">3 Adult</option>
-	                      <option value="">4 Adult</option>
-	                      <option value="">5 Adult</option>
-	                      <option value="">6 Adult</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		                <div class="select-wrap one-third">
-	                    <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-	                    <select name="" id="" class="form-control">
-	                    	<option value="">0 Children</option>
-	                    	<option value="">1 Children</option>
-	                      <option value="">2 Children</option>
-	                      <option value="">3 Children</option>
-	                      <option value="">4 Children</option>
-	                      <option value="">5 Children</option>
-	                      <option value="">6 Children</option>
-	                    </select>
-	                  </div>
-		              </div>
-		              <div class="form-group">
-		              	<div class="range-slider">
-		              		<span>
-										    <input type="number" value="25000" min="0" max="120000"/>	-
-										    <input type="number" value="50000" min="0" max="120000"/>
-										  </span>
-										  <input value="1000" min="0" max="120000" step="500" type="range"/>
-										  <input value="50000" min="0" max="120000" step="500" type="range"/>
-										  </svg>
-										</div>
-		              </div>
-		              <div class="form-group">
-		                <input type="submit" value="Search" class="btn btn-primary py-3 px-5">
-		              </div>
-		            </div>
-	            </form>
-	      		</div> -->
-            <div class="sidebar-wrap bg-light ftco-animate">
-              <h3 class="heading mb-4">Star Rating</h3>
-              <form method="post" class="star-rating">
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1">
-                    <p class="rate">
-                      <span
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star"></i
-                      ></span>
+            <div class="row">
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/attraction/kufri.jpg)"
+                  >
+                  </a>
+                  <div class="description text-center mt-2">
+                    <h5>Kufri</h5>
+                    <p>
+                      Kufri is a popular hill station near Shimla, famous for
+                      its scenic beauty and adventure activities. Known as a
+                      winter sports destination, Kufri offers skiing,
+                      tobogganing, and hiking. Surrounded by lush forests and
+                      snow-capped peaks, it is a favorite spot for tourists
+                      seeking nature and thrill.
                     </p>
-                  </label>
+                  </div>
                 </div>
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1">
-                    <p class="rate">
-                      <span
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star-o"></i
-                      ></span>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="
+                      background-image: url(images/attraction/reliving-history-at-christ-church.webp);
+                    "
+                  >
+                  </a>
+                  <div class="description text-center mt-2">
+                    <h5>The Mall</h5>
+                    <p>
+                      hrist Church, located on The Ridge in Shimla, is the
+                      second oldest church in northern India, built in 1857 in
+                      the neo-Gothic style. Designed by Colonel J.T. Boileau, it
+                      was constructed to serve the spiritual needs of the
+                      British community during the colonial era .
                     </p>
-                  </label>
+                  </div>
                 </div>
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1">
-                    <p class="rate">
-                      <span
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star"></i><i class="icon-star-o"></i
-                        ><i class="icon-star-o"></i
-                      ></span>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="
+                      background-image: url(images/attraction/sanakat\ mochan.jpg);
+                    "
+                  >
+                  </a>
+                  <div class="description text-center mt-2">
+                    <h5>Sankat Mochan</h5>
+                    <p>
+                      hrist Church, located on The Ridge in Shimla, is the
+                      second oldest church in northern India, built in 1857 in
+                      the neo-Gothic style. Designed by Colonel J.T. Boileau, it
+                      was constructed to serve the spiritual needs of the
+                      British community during the colonial era .
                     </p>
-                  </label>
+                  </div>
                 </div>
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1">
-                    <p class="rate">
-                      <span
-                        ><i class="icon-star"></i><i class="icon-star"></i
-                        ><i class="icon-star-o"></i><i class="icon-star-o"></i
-                        ><i class="icon-star-o"></i
-                      ></span>
-                    </p>
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-                  <label class="form-check-label" for="exampleCheck1">
-                    <p class="rate">
-                      <span
-                        ><i class="icon-star"></i><i class="icon-star-o"></i
-                        ><i class="icon-star-o"></i><i class="icon-star-o"></i
-                        ><i class="icon-star-o"></i
-                      ></span>
-                    </p>
-                  </label>
-                </div>
-              </form>
+              </div>
             </div>
           </div>
         </div>
