--- a/gallery.html
+++ b/gallery.html
@@ -64,10 +64,13 @@
             </li><li class="nav-item">
               <a href="attraction.html" class="nav-link">Attraction</a>
             </li>
+            <li class="nav-item active">
+              <a href="gallery.html" class="nav-link">Gallery</a>
+            </li>
             <!-- <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li> -->
-            <li class="nav-item active">
+            <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
@@ -88,158 +91,157 @@
             <div class="text">
               <p class="breadcrumbs mb-2">
                 <span class="mr-2"><a href="index.html">Home</a></span>
-                <span>Contact</span>
+                <span>About</span>
               </p>
-              <h1 class="mb-4 bread">Contact Us</h1>
+              <h1 class="mb-4 bread">Gallery</h1>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <section class="ftco-section contact-section bg-light">
+    <section class="ftco-section bg-light">
       <div class="container">
-        <div class="row d-flex mb-5 contact-info">
-          <div class="col-md-12 mb-4">
-            <h2 class="h3">Contact Information</h2>
-          </div>
-          <div class="w-100"></div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Address:</span> Near, Mall Rd, Lakkar Bazar, Shimla,
-                Himachal Pradesh 171001
-              </p>
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/s_2.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/deluc.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/super-delux.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Phone:</span>
-                <a href="tel:9805222727">+91-9805222727</a>
-              </p>
+            <div class="row">
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/s_2.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/deluc.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/super-delux.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Email:</span>
-                <a href="mailto:attersharma100@gmail.com"
-                  >attersharma100@gmail.com</a
-                >
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p><span>Website</span> <a href="#">yoursite.com</a></p>
+            <div class="row">
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/s_2.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/deluc.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm col-md-6 col-lg-4 ftco-animate">
+                <div class="room">
+                  <a
+                    class="img d-flex justify-content-center align-items-center"
+                    style="background-image: url(images/super-delux.jpeg)"
+                  >
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="row block-9">
-          <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-white p-5 contact-form">
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Name"
-                />
-              </div>
-              <div class="form-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your Email"
-                />
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject" />
-              </div>
-              <div class="form-group">
-                <textarea
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="7"
-                  class="form-control"
-                  placeholder="Message"
-                ></textarea>
-              </div>
-              <div class="form-group">
-                <input
-                  type="submit"
-                  value="Send Message"
-                  class="btn btn-primary py-3 px-5"
-                />
-              </div>
-            </form>
-          </div>
+      </div>
+    </section>
 
-          <div class="col-md-6 d-flex">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3416.1692657087256!2d77.1731958750524!3d31.1050271675459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39057893bdef8ae3%3A0x9f94a27bea4e7ee6!2sHotel%20Harbans!5e0!3m2!1sen!2sin!4v1740809015974!5m2!1sen!2sin"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-            <!-- <div id="map" class="bg-white">
-              
-            </div> -->
+    <!-- <section class="instagram pt-5">
+      <div class="container-fluid">
+        <div class="row no-gutters justify-content-center pb-5">
+          <div class="col-md-7 text-center heading-section ftco-animate">
+            <h2><span>Instagram</span></h2>
+          </div>
+        </div>
+        <div class="row no-gutters">
+          <div class="col-sm-12 col-md ftco-animate">
+            <a href="images/insta-1.jpg" class="insta-img image-popup" style="background-image: url(images/insta-1.jpg);">
+              <div class="icon d-flex justify-content-center">
+                <span class="icon-instagram align-self-center"></span>
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-12 col-md ftco-animate">
+            <a href="images/insta-2.jpg" class="insta-img image-popup" style="background-image: url(images/insta-2.jpg);">
+              <div class="icon d-flex justify-content-center">
+                <span class="icon-instagram align-self-center"></span>
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-12 col-md ftco-animate">
+            <a href="images/insta-3.jpg" class="insta-img image-popup" style="background-image: url(images/insta-3.jpg);">
+              <div class="icon d-flex justify-content-center">
+                <span class="icon-instagram align-self-center"></span>
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-12 col-md ftco-animate">
+            <a href="images/insta-4.jpg" class="insta-img image-popup" style="background-image: url(images/insta-4.jpg);">
+              <div class="icon d-flex justify-content-center">
+                <span class="icon-instagram align-self-center"></span>
+              </div>
+            </a>
+          </div>
+          <div class="col-sm-12 col-md ftco-animate">
+            <a href="images/insta-5.jpg" class="insta-img image-popup" style="background-image: url(images/insta-5.jpg);">
+              <div class="icon d-flex justify-content-center">
+                <span class="icon-instagram align-self-center"></span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
-    </section>
-    <section class="ftco-section contact-section bg-light">
-      <div class="container">
-        <div class="row d-flex mb-5 contact-info">
-          <div class="col-md-12 mb-4">
-            <h2 class="h3">Account Information</h2>
-          </div>
-          <div class="w-100"></div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p><span>Account No.:</span> 0427000106732954</p>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>IFSC:</span>
-                <a>PUNB0042700</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Bank Address:</span>
-                <a>Punjab National Bank, The Mall Shimla(HP)-171001</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Bank Address:</span>
-                <a>Punjab National Bank, The Mall Shimla(HP)-171001</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 d-flex">
-            <div class="info bg-white p-4">
-              <p>
-                <span>Holder Name:</span>
-                <a>Atter Singh S/o SH Tulsi Ram</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    </section> -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
@@ -252,18 +254,18 @@
                 Vokalia and Consonantia, there live the blind texts.
               </p>
               <!-- <ul
-                class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
-              >
-                <li class="ftco-animate">
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li class="ftco-animate">
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li class="ftco-animate">
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-              </ul> -->
+				  class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
+				>
+				  <li class="ftco-animate">
+					<a href="#"><span class="icon-twitter"></span></a>
+				  </li>
+				  <li class="ftco-animate">
+					<a href="#"><span class="icon-facebook"></span></a>
+				  </li>
+				  <li class="ftco-animate">
+					<a href="#"><span class="icon-instagram"></span></a>
+				  </li>
+				</ul> -->
             </div>
           </div>
           <div class="col-md">
