--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             </li>
             <li class="nav-item">
               <a href="rooms.html" class="nav-link">Rooms</a>
+            </li><li class="nav-item">
+              <a href="attraction.html" class="nav-link">Attraction</a>
+            </li>
+            <li class="nav-item">
+              <a href="gallery.html" class="nav-link">Gallery</a>
             </li>
             <!-- <li class="nav-item"><a href="restaurant.html" class="nav-link">Restaurant</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -132,7 +137,7 @@
             class="col-md-9 ftco-animate text-center d-flex align-items-end justify-content-center"
           >
             <div class="text">
-              <h1 class="mb-4 bread">Welcome to Hotel Harbans</h1>
+              <h6 class="mb-4 bread">Welcome to Hotel Harbans (9805222727)</h6>
             </div>
           </div>
         </div>
